Fix z-index issue

--- a/_styles/modules/_header.css
+++ b/_styles/modules/_header.css
@@ -75,7 +75,9 @@
     font-size: .875rem;
     font-weight: bold;
     margin: 2rem 0 1rem;
+    position: relative;
     text-shadow: 0 1px 1px rgba(0, 0, 0, .5);
+    z-index: 2;
 
     @media (min-width: 35em) {
       display: block;
